using callugraphyconfig lib to use for new font

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,9 +26,13 @@ dependencies {
     })
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.android.support:design:25.0.1'
     compile 'com.nineoldandroids:library:2.4.0'
     compile 'com.github.ksoichiro:android-observablescrollview:1.6.0'
+
+    compile 'uk.co.chrisjenx:calligraphy:2.2.0'
+
     testCompile 'junit:junit:4.12'
 }
